fix telegram webapp script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest",
-    "@telegram/web-apps": "latest"
+    "react-dom": "latest"
   }
 }
